Basic dataframe generation

--- a/fruits-360.ipynb
+++ b/fruits-360.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,92 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf"
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from PIL import Image\n",
+    "\n",
+    "#Auxiliary libraries\n",
+    "from os import listdir, path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Declaring and defining the constants\n",
+    "BASE_FOLDER = 'data'\n",
+    "TRAIN_FOLDER = 'data/Training'\n",
+    "TEST_FOLDER = 'data/Test'\n",
+    "TRAIN_DF = 'train_df.csv'\n",
+    "TEST_DF = 'test_df.csv'\n",
+    "COLUMNS = {\n",
+    "    'LABEL':'label',\n",
+    "    'FILE':'file'\n",
+    "}\n",
+    "\n",
+    "INPUT_SHAPE = (100,100,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_dataframe(data_folder, columns = COLUMNS):\n",
+    "    labels = listdir(data_folder)\n",
+    "    \n",
+    "    dataframe = pd.DataFrame()\n",
+    "    \n",
+    "    for lbl in labels:\n",
+    "        data = {\n",
+    "            columns['FILE'] : [path.join(lbl,file) for file in listdir(path.join(data_folder,lbl))],\n",
+    "            columns['LABEL']: lbl\n",
+    "        }\n",
+    "        df = pd.DataFrame(data)\n",
+    "        \n",
+    "        dataframe = dataframe.append(df)\n",
+    "    \n",
+    "    return dataframe.sample(frac=1).reset_index(drop=True)\n",
+    "\n",
+    "def load_dataframe(df_path):\n",
+    "    if path.isfile(df_path):\n",
+    "        return pd.read_csv(df_path)\n",
+    "    else:\n",
+    "        return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Load the dataframe\n",
+    "\n",
+    "train_df = load_dataframe(path.join(BASE_FOLDER, TRAIN_DF))\n",
+    "\n",
+    "if train_df is None:\n",
+    "    train_df = generate_dataframe(TRAIN_FOLDER)\n",
+    "    train_df.to_csv(path.join(BASE_FOLDER, TRAIN_DF),index=False)\n",
+    "    \n",
+    "\n",
+    "test_df = load_dataframe(path.join(BASE_FOLDER, TEST_DF))\n",
+    "\n",
+    "if test_df is None:\n",
+    "    test_df = generate_dataframe(TEST_FOLDER)\n",
+    "    test_df.to_csv(path.join(BASE_FOLDER, TEST_DF),index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CLASSES = pd.unique(train_df['label'])\n",
+    "QTT_CLASSES = CLASSES.shape[0]"
    ]
   },
   {
