Add model prediction

--- a/fruits-360.ipynb
+++ b/fruits-360.ipynb
@@ -446,6 +446,238 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import load_model\n",
+    "from sklearn.metrics import accuracy_score,classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = load_model('model/epoch-7_valloss-0.00.hdf5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict the label of the test_images\n",
+    "pred = model.predict(\n",
+    "    test_images,\n",
+    "    steps = len(test_images),\n",
+    "    workers = 6)\n",
+    "pred = np.argmax(pred,axis=1)\n",
+    "\n",
+    "# Map the label\n",
+    "labels = (train_images.class_indices)\n",
+    "labels = dict((v,k) for k,v in labels.items())\n",
+    "pred = [labels[k] for k in pred]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Lychee', 'Orange', 'Cocos', 'Peach 2', 'Peach']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on the test set: 98.27%\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_test = list(test_df[COLUMNS['LABEL']])\n",
+    "acc = accuracy_score(y_test,pred)\n",
+    "print(f'Accuracy on the test set: {acc * 100:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     precision    recall  f1-score   support\n",
+      "\n",
+      "     Apple Braeburn       1.00      0.91      0.95       164\n",
+      " Apple Crimson Snow       0.99      1.00      0.99       148\n",
+      "     Apple Golden 1       1.00      1.00      1.00       160\n",
+      "     Apple Golden 2       1.00      1.00      1.00       164\n",
+      "     Apple Golden 3       0.99      1.00      1.00       161\n",
+      " Apple Granny Smith       1.00      0.99      1.00       164\n",
+      "    Apple Pink Lady       0.99      1.00      0.99       152\n",
+      "        Apple Red 1       0.96      0.96      0.96       164\n",
+      "        Apple Red 2       0.95      1.00      0.97       164\n",
+      "        Apple Red 3       1.00      1.00      1.00       144\n",
+      "Apple Red Delicious       1.00      1.00      1.00       166\n",
+      " Apple Red Yellow 1       1.00      1.00      1.00       164\n",
+      " Apple Red Yellow 2       1.00      0.98      0.99       219\n",
+      "            Apricot       1.00      1.00      1.00       164\n",
+      "            Avocado       1.00      0.95      0.97       143\n",
+      "       Avocado ripe       1.00      1.00      1.00       166\n",
+      "             Banana       1.00      1.00      1.00       166\n",
+      " Banana Lady Finger       0.92      1.00      0.96       152\n",
+      "         Banana Red       1.00      1.00      1.00       166\n",
+      "           Beetroot       1.00      0.59      0.74       150\n",
+      "          Blueberry       1.00      1.00      1.00       154\n",
+      "       Cactus fruit       1.00      1.00      1.00       166\n",
+      "       Cantaloupe 1       1.00      1.00      1.00       164\n",
+      "       Cantaloupe 2       1.00      1.00      1.00       164\n",
+      "          Carambula       1.00      0.87      0.93       166\n",
+      "        Cauliflower       1.00      1.00      1.00       234\n",
+      "           Cherry 1       1.00      1.00      1.00       164\n",
+      "           Cherry 2       1.00      1.00      1.00       246\n",
+      "     Cherry Rainier       1.00      1.00      1.00       246\n",
+      "   Cherry Wax Black       1.00      1.00      1.00       164\n",
+      "     Cherry Wax Red       1.00      1.00      1.00       164\n",
+      "  Cherry Wax Yellow       1.00      1.00      1.00       164\n",
+      "           Chestnut       0.99      0.99      0.99       153\n",
+      "         Clementine       1.00      1.00      1.00       166\n",
+      "              Cocos       1.00      0.93      0.96       166\n",
+      "               Corn       1.00      0.44      0.61       150\n",
+      "          Corn Husk       1.00      0.78      0.88       154\n",
+      "      Cucumber Ripe       1.00      1.00      1.00       130\n",
+      "    Cucumber Ripe 2       1.00      1.00      1.00       156\n",
+      "              Dates       0.99      1.00      1.00       166\n",
+      "           Eggplant       0.99      0.78      0.87       156\n",
+      "                Fig       1.00      1.00      1.00       234\n",
+      "        Ginger Root       1.00      0.98      0.99        99\n",
+      "         Granadilla       1.00      1.00      1.00       166\n",
+      "         Grape Blue       1.00      1.00      1.00       328\n",
+      "         Grape Pink       0.96      1.00      0.98       164\n",
+      "        Grape White       0.99      1.00      1.00       166\n",
+      "      Grape White 2       1.00      1.00      1.00       166\n",
+      "      Grape White 3       1.00      1.00      1.00       164\n",
+      "      Grape White 4       1.00      1.00      1.00       158\n",
+      "    Grapefruit Pink       1.00      1.00      1.00       166\n",
+      "   Grapefruit White       1.00      1.00      1.00       164\n",
+      "              Guava       1.00      1.00      1.00       166\n",
+      "           Hazelnut       1.00      1.00      1.00       157\n",
+      "        Huckleberry       1.00      1.00      1.00       166\n",
+      "               Kaki       1.00      1.00      1.00       166\n",
+      "               Kiwi       1.00      1.00      1.00       156\n",
+      "           Kohlrabi       1.00      1.00      1.00       157\n",
+      "           Kumquats       1.00      1.00      1.00       166\n",
+      "              Lemon       1.00      1.00      1.00       164\n",
+      "        Lemon Meyer       1.00      1.00      1.00       166\n",
+      "              Limes       1.00      1.00      1.00       166\n",
+      "             Lychee       1.00      1.00      1.00       166\n",
+      "          Mandarine       0.99      1.00      0.99       166\n",
+      "              Mango       1.00      1.00      1.00       166\n",
+      "          Mango Red       0.97      0.99      0.98       142\n",
+      "          Mangostan       0.89      1.00      0.94       102\n",
+      "           Maracuja       1.00      1.00      1.00       166\n",
+      " Melon Piel de Sapo       0.95      1.00      0.98       246\n",
+      "           Mulberry       1.00      1.00      1.00       164\n",
+      "          Nectarine       1.00      1.00      1.00       164\n",
+      "     Nectarine Flat       1.00      0.88      0.93       160\n",
+      "         Nut Forest       1.00      1.00      1.00       218\n",
+      "          Nut Pecan       1.00      1.00      1.00       178\n",
+      "          Onion Red       0.96      0.99      0.98       150\n",
+      "   Onion Red Peeled       1.00      1.00      1.00       155\n",
+      "        Onion White       0.78      1.00      0.88       146\n",
+      "             Orange       1.00      1.00      1.00       160\n",
+      "             Papaya       1.00      1.00      1.00       164\n",
+      "      Passion Fruit       1.00      1.00      1.00       166\n",
+      "              Peach       1.00      1.00      1.00       164\n",
+      "            Peach 2       0.95      1.00      0.97       246\n",
+      "         Peach Flat       1.00      1.00      1.00       164\n",
+      "               Pear       1.00      1.00      1.00       164\n",
+      "             Pear 2       1.00      0.99      1.00       232\n",
+      "         Pear Abate       1.00      0.99      1.00       166\n",
+      "       Pear Forelle       1.00      1.00      1.00       234\n",
+      "        Pear Kaiser       1.00      1.00      1.00       102\n",
+      "       Pear Monster       1.00      1.00      1.00       166\n",
+      "           Pear Red       1.00      1.00      1.00       222\n",
+      "         Pear Stone       0.84      1.00      0.91       237\n",
+      "      Pear Williams       0.98      1.00      0.99       166\n",
+      "             Pepino       1.00      0.98      0.99       166\n",
+      "       Pepper Green       0.99      0.99      0.99       148\n",
+      "      Pepper Orange       1.00      1.00      1.00       234\n",
+      "         Pepper Red       0.94      1.00      0.97       222\n",
+      "      Pepper Yellow       0.98      1.00      0.99       222\n",
+      "           Physalis       1.00      1.00      1.00       164\n",
+      " Physalis with Husk       0.88      1.00      0.93       164\n",
+      "          Pineapple       1.00      1.00      1.00       166\n",
+      "     Pineapple Mini       1.00      1.00      1.00       163\n",
+      "       Pitahaya Red       1.00      1.00      1.00       166\n",
+      "               Plum       0.96      1.00      0.98       151\n",
+      "             Plum 2       1.00      1.00      1.00       142\n",
+      "             Plum 3       1.00      1.00      1.00       304\n",
+      "        Pomegranate       1.00      1.00      1.00       164\n",
+      "     Pomelo Sweetie       1.00      1.00      1.00       153\n",
+      "         Potato Red       0.90      1.00      0.95       150\n",
+      "  Potato Red Washed       0.99      1.00      1.00       151\n",
+      "       Potato Sweet       1.00      0.65      0.79       150\n",
+      "       Potato White       0.74      1.00      0.85       150\n",
+      "             Quince       0.95      1.00      0.97       166\n",
+      "           Rambutan       1.00      1.00      1.00       164\n",
+      "          Raspberry       1.00      1.00      1.00       166\n",
+      "         Redcurrant       1.00      1.00      1.00       164\n",
+      "              Salak       0.91      1.00      0.95       162\n",
+      "         Strawberry       1.00      1.00      1.00       164\n",
+      "   Strawberry Wedge       1.00      0.97      0.99       246\n",
+      "          Tamarillo       1.00      1.00      1.00       166\n",
+      "            Tangelo       1.00      1.00      1.00       166\n",
+      "           Tomato 1       1.00      1.00      1.00       246\n",
+      "           Tomato 2       0.98      1.00      0.99       225\n",
+      "           Tomato 3       0.98      1.00      0.99       246\n",
+      "           Tomato 4       1.00      0.97      0.99       160\n",
+      "  Tomato Cherry Red       1.00      1.00      1.00       164\n",
+      "       Tomato Heart       0.94      0.93      0.94       228\n",
+      "      Tomato Maroon       1.00      1.00      1.00       127\n",
+      "      Tomato Yellow       1.00      1.00      1.00       153\n",
+      " Tomato not Ripened       0.97      0.99      0.98       158\n",
+      "             Walnut       1.00      1.00      1.00       249\n",
+      "         Watermelon       0.83      1.00      0.91       157\n",
+      "\n",
+      "           accuracy                           0.98     22688\n",
+      "          macro avg       0.98      0.98      0.98     22688\n",
+      "       weighted avg       0.98      0.98      0.98     22688\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_report = classification_report(y_test, pred, zero_division=1)\n",
+    "print(class_report)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
